<resources>
    <string name="app_name">Express Cab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">All Rides</string>
    <string name="menu_gallery">Transaction History</string>
    <string name="menu_slideshow">Pay Commission</string>
    <string name="menu_tools">Performance</string>
    <string name="menu_share">Profile</string>
    <string name="menu_send">Help/ Support</string>
    <string name="menu_driver">Register Your Driver</string>
    <string name="menu_login">LogIn</string>
    <string name="menu_logout">LogOut</string>
</resources>
